syntax = "proto3";
option java_package = "Grpc";

message TeamCreateRequest{
  string request = 1;
}

message TeamCreateResponse{
  string response = 1;
  int32 status = 2;
}

service TeamService{
  rpc createTeam(TeamCreateRequest) returns(TeamCreateResponse);
}